service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 8081
  selector:
    app: web
